fix get models endpoint
