# packages/openapi-client/openapi.json
@@ -641,12 +641,27 @@
           },
           "description": {
             "type": "string"
+          },
+          "lastModified": {
+            "type": "string",
+            "format": "date-time",
+            "pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d(?::[0-5]\\d(?:\\.\\d+)?)?(?:Z))$"
+          },
+          "role": {
+            "type": "string",
+            "enum": [
+              "Owner",
+              "Contributor",
+              "Reviewer"
+            ]
           }
         },
         "required": [
           "id",
           "name",
-          "description"
+          "description",
+          "lastModified",
+          "role"
         ],
         "additionalProperties": false,
         "id": "Model"
@@ -659,20 +674,14 @@
             "type": "string",
             "minLength": 1
           },
-          "authorId": {
-            "type": "string",
-            "format": "uuid",
-            "pattern": "^([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12}|00000000-0000-0000-0000-000000000000|ffffffff-ffff-ffff-ffff-ffffffffffff)$"
-          },
-          "message": {
+          "description": {
             "type": "string",
             "minLength": 1
           }
         },
         "required": [
           "name",
-          "authorId",
-          "message"
+          "description"
         ],
         "additionalProperties": false,
         "id": "CreateModelRequest"
